--- a/index.html
+++ b/index.html
@@ -5,34 +5,103 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Express Capital Associate Form Upload</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f9; }
-    h1 { color: #333; text-align: center; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f4f4f9;
+    }
+    h1 {
+      color: #333;
+      text-align: center;
+    }
     form {
-      background-color: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      max-width: 400px; margin: 24px auto 0 auto;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      max-width: 400px;
+      margin: 24px auto 0 auto;
     }
-    label { display: block; margin-bottom: 10px; color: #444; font-weight: 500; }
-    input[type="file"], input[type="email"], input[type="text"], textarea {
-      margin-bottom: 20px; width: 100%; padding: 8px; border-radius: 4px; border: 1px solid #ccc; box-sizing: border-box; font-size: 1em;
+    label {
+      display: block;
+      margin-bottom: 10px;
+      color: #444;
+      font-weight: 500;
     }
-    .button-row { display: flex; gap: 10px; margin-top: 10px; }
+    input[type="file"],
+    input[type="email"],
+    input[type="text"],
+    textarea {
+      margin-bottom: 20px;
+      width: 100%;
+      padding: 8px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+      font-size: 1em;
+    }
+    .button-row {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+    }
     button {
-      background-color: #4CAF50; color: white; padding: 10px 15px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; flex: 1 1 0;
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+      flex: 1 1 0;
     }
-    button[type="button"] { background-color: #d32f2f; }
-    button[type="button"]:hover { background-color: #b71c1c; }
-    button[type="submit"]:hover { background-color: #45a049; }
-    .note, .instructions { font-size: 0.97em; color: #666; margin-bottom: 15px; text-align: center; }
-    .instructions { color: #222; background: #e8f9f4; border: 1px solid #b2dfdb; border-radius: 6px; padding: 10px 8px; margin-bottom: 18px; }
+    button[type="button"] {
+      background-color: #d32f2f;
+    }
+    button[type="button"]:hover {
+      background-color: #b71c1c;
+    }
+    button[type="submit"]:hover {
+      background-color: #45a049;
+    }
+    .note, .instructions {
+      font-size: 0.97em;
+      color: #666;
+      margin-bottom: 15px;
+      text-align: center;
+    }
+    .instructions {
+      color: #222;
+      background: #e8f9f4;
+      border: 1px solid #b2dfdb;
+      border-radius: 6px;
+      padding: 10px 8px;
+      margin-bottom: 18px;
+    }
     .docusign-section {
-      max-width: 400px; margin: 28px auto 0 auto; text-align: center; background: #fdf6e3; padding: 15px 20px;
-      border-radius: 8px; border: 1px solid #ffe082; box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      max-width: 400px;
+      margin: 28px auto 0 auto;
+      text-align: center;
+      background: #fdf6e3;
+      padding: 15px 20px;
+      border-radius: 8px;
+      border: 1px solid #ffe082;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
     .docusign-section button {
-      background-color: #00488A; color: #fff; border-radius: 5px; font-size: 17px; padding: 10px 16px; margin-top: 8px;
-      border: none; cursor: pointer; transition: background 0.2s;
+      background-color: #00488A;
+      color: #fff;
+      border-radius: 5px;
+      font-size: 17px;
+      padding: 10px 16px;
+      margin-top: 8px;
+      border: none;
+      cursor: pointer;
+      transition: background 0.2s;
     }
-    .docusign-section button:hover { background-color: #002b4d; }
+    .docusign-section button:hover {
+      background-color: #002b4d;
+    }
   </style>
 </head>
 <body>
